	  $MFTMirr.  Ported from kernel driver 2.1.27 release and aplied both
	  to libntfs/volume.c mount related code and to ntfsprogs/ntfsfix.c's
	  fixup code.  (Anton)
	- Change ntfsinfo to dump the key data as well as the keys themselves
	  when dumping the $ObjId/$O index.  (Anton)
	- ntfsinfo: dump either a minimal (default) or the entire attribute
	  header (--verbose) for all attributes types. Also removed a lot of
	  redundant code and made some formatting corrections.  (Szaka)
	- libntfs: add ntfs_str2ucs(), ntfs_freeucs(), ntfs_mft_usn_dec()
	  and ntfs_inode_badclus_bad() functions, and convert all copy-pastes
	  to use them.  (Szaka)
	- Fix all incorrect getopt_long() return value usages.  (Szaka)
	- Fix VCN size in the index.c.  (Anton, Yura)
	- ntfscmp: support bad cluster list, compare full attribute headers
	  for non-resident attributes, added manual, build and install by 
	  default.  (Szaka)
	- configure.ac: set PKG_CONFIG_PATH during build time so we should
	  find .pc files in the most typical pkgconfig directories.  (Szaka)
	- Improve ntfsinfo to dump standard info completely and filename
	  attribute completely and index entry (filename) completely and all in
	  correct order.  Essential for hunting bugs in directory operations
	  code...  (Anton)

27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.

	- Temporarily disable use of the legal ansi character checking in
	  libntfs/unistr.c::ntfs_names_collate() pending a proper fix at some
	  point.  (Anton)
	- Rewrite gcc version detection logic using the -dumpversion option.
	  Tested on various OS and architectures and gcc versions from 2.95 to
	  4.0.2 with some weird ones like 3.5-blah thrown in, too.  (Anton)
	- Fix bogus le16_to_cpu() which should be le32_to_cpu() when accessing
	  the attribute list entry attribute type in some places in
	  libntfs/attrib.c.  (Anton)
	- Fix silly bug introduced in 1.12.0 which breaks ntfsfix (and others