@@ -30,8 +30,9 @@ xx/xx/2006 - 1.13.1-WIP
 	- Change ntfsinfo to dump the key data as well as the keys themselves
 	  when dumping the $ObjId/$O index.  (Anton)
 	- ntfsinfo: dump either a minimal (default) or the entire attribute
-	  header (--verbose) for all attributes types. Also removed a lot of
-	  redundant code and made some formatting corrections.  (Szaka)
+	  header (--verbose) for all attribute types. Dump USA, USN and LSN
+	  for index records. Removed a lot of redundant code, made some
+	  formatting and stylistic corrections.  (Szaka)
 	- libntfs: add ntfs_str2ucs(), ntfs_freeucs(), ntfs_mft_usn_dec()
 	  and ntfs_inode_badclus_bad() functions, and convert all copy-pastes
 	  to use them.  (Szaka)
